--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,27 +1,4 @@
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <!-- Brand -->
-  <a class="navbar-brand" href="#">Stars&Planets</a>
-
-  <!-- Links -->
-  <ul class="navbar-nav">
-    <li class="nav-item">
-      <a class="nav-link" href="#">Stars</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Planets</a>
-    </li>
-  </ul>
-
-    <!-- Dropdown -->
-  <ul class="nav navbar-nav ml-auto">
-    <li class="nav-item dropdown" dropdown>
-      <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown" dropdownToggle>
-        Settings
-      </a>
-      <div class="dropdown-menu" *dropdownMenu>
-        <a class="dropdown-item" href="#">Register</a>
-        <a class="dropdown-item" href="#">Log In</a>
-      </div>
-    </li>
-  </ul>
-</nav>
+<app-navigation></app-navigation>
+<div class="container">
+ <router-outlet></router-outlet>
+</div>
