--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,3 +1,27 @@
-<p>
-  navigation works!
-</p>
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <!-- Brand -->
+  <a class="navbar-brand" role="button" routerLink="">Stars&Planets</a>
+
+  <!-- Links -->
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" role="button" routerLink="/stars">Stars</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" role="button" routerLink="/planets">Planets</a>
+    </li>
+  </ul>
+
+  <!-- Dropdown -->
+  <ul class="nav navbar-nav ml-auto">
+    <li class="nav-item dropdown" dropdown>
+      <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown" dropdownToggle>
+        Settings
+      </a>
+      <div class="dropdown-menu" *dropdownMenu>
+        <a class="dropdown-item" href="#">Register</a>
+        <a class="dropdown-item" href="#">Log In</a>
+      </div>
+    </li>
+  </ul>
+</nav>
