--- a/src/app/planets/planets.component.html
+++ b/src/app/planets/planets.component.html
@@ -1,3 +1,10 @@
-<p>
-  planets works!
-</p>
+<div class="row">
+  <div class="col">
+    <ul class="list-group">
+      <a class="list-group-item" style="cursor: pointer" *ngFor="let planet of planets">
+        {{planet.name}}
+      </a>
+    </ul>
+  </div>
+  <div class="col"></div>
+</div>
