--- a/src/app/stars/stars.component.html
+++ b/src/app/stars/stars.component.html
@@ -1,3 +1,12 @@
-<p>
-  stars works!
-</p>
+<div class="row">
+  <div class="col">
+    <ul class="list-group">
+      <a class="list-group-item" style="cursor: pointer" *ngFor="let star of stars">
+        {{star.name}}
+      </a>
+    </ul>
+  </div>
+  <div class="col">
+    <app-star-details></app-star-details>
+  </div>
+</div>
