Added star-item and star-edit components. Implemented functionality to the add and delete buttons. Added search bar, yet without functonality.

--- a/src/app/stars/star-details/star-details.component.html
+++ b/src/app/stars/star-details/star-details.component.html
@@ -1,3 +1,4 @@
-<p>
-  star-details works!
-</p>
+<h2>{{selectedStar.name}}</h2>
+<br>
+<h4>Klasse der Sterns:</h4><p>{{selectedStar.spectralType}}</p>
+<h4>Sonnenmasse:</h4><p>{{selectedStar.relativeToSunMass}}</p>
