--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,26 +1,26 @@
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+<nav class="navbar navbar-expand-sm bg-info navbar-dark">
   <!-- Brand -->
-  <a class="navbar-brand" role="button" routerLink="">Stars&Planets</a>
+  <a class="navbar-brand" role="button" routerLink="">Sterne&Planeten</a>
 
   <!-- Links -->
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link" role="button" routerLink="/stars">Stars</a>
+      <a class="nav-link" role="button" routerLink="/stars">Sterne</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" role="button" routerLink="/planets">Planets</a>
+      <a class="nav-link" role="button" routerLink="/planets">Planeten</a>
     </li>
   </ul>
 
   <!-- Dropdown -->
   <ul class="nav navbar-nav ml-auto">
     <li class="nav-item dropdown" dropdown>
-      <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown" dropdownToggle>
-        Settings
+      <a class="nav-link dropdown-toggle" role="button" id="navbardrop" data-toggle="dropdown" dropdownToggle>
+        Konto
       </a>
-      <div class="dropdown-menu" *dropdownMenu>
-        <a class="dropdown-item" href="#">Register</a>
-        <a class="dropdown-item" href="#">Log In</a>
+      <div class="dropdown-menu dropdown-menu-right" *dropdownMenu>
+        <a class="dropdown-item" href="#">Registrieren</a>
+        <a class="dropdown-item" href="#">Einloggen</a>
       </div>
     </li>
   </ul>
