Transformed the list of stars to an accordion, which shows the orbiting planets when clicked. Modified the star model, added the property 'orbitingPlanets'.

--- a/src/app/stars/star-item/star-item.component.html
+++ b/src/app/stars/star-item/star-item.component.html
@@ -1,3 +1,6 @@
-<a class="list-group-item" (click)="showStarDetails()">
-  {{star.name}}
-</a>
+<accordion-group>
+  <button class="btn btn-block clearfix" (click)="showStarDetails()" accordion-heading>{{star.name}}</button>
+  <ul class="list-group">
+    <a class="list-group-item" *ngFor="let planetItem of star.orbitingPlanets">{{planetItem.name}}</a>
+  </ul>
+</accordion-group>
