--- a/src/app/stars/star-details/star-details.component.html
+++ b/src/app/stars/star-details/star-details.component.html
@@ -1,4 +1,4 @@
 <h2>{{selectedStar.name}}</h2>
 <br>
 <h4>Klasse der Sterns:</h4><p>{{selectedStar.spectralType}}</p>
-<h4>Sonnenmasse:</h4><p>{{selectedStar.relativeToSunMass}}</p>
+<h4>Sonnenmasse:</h4><p>{{selectedStar.solarMass}}</p>
