--- a/src/app/stars/star-edit/star-edit.component.html
+++ b/src/app/stars/star-edit/star-edit.component.html
@@ -1,14 +1,14 @@
 <div class="form-group">
   <label for="starName">Name des Sterns:</label>
-  <input type="text" class="form-control" id="starName" #starName>
+  <input type="text" class="form-control" id="starName"  value="" #starName>
 </div>
 <div class="form-group">
   <label for="starClass">Klasse:</label>
-  <input type="text" class="form-control" id="starClass" #starClass>
+  <input type="text" class="form-control" id="starClass"  value="" #starClass>
 </div>
 <div class="form-group">
   <label for="solarMass">Sonnenmasse:</label>
-  <input type="text" class="form-control" id="solarMass" #solarMass>
+  <input type="text" class="form-control" id="solarMass" value="" #solarMass>
 </div>
 <div class="btn-group">
   <button class="btn btn-primary" (click)="addToList()">Speichern</button>
