Updated the path of the details route. Now it also takes the starName parameter in order to load the details of the selected star.

--- a/src/app/stars/star-edit/star-edit.component.html
+++ b/src/app/stars/star-edit/star-edit.component.html
@@ -11,6 +11,6 @@
   <input type="text" class="form-control" id="solarMass" #solarMass>
 </div>
 <div class="btn-group">
-  <button class="btn btn-primary">Speichern</button>
+  <button class="btn btn-primary" (click)="addToList()">Speichern</button>
   <button class="btn btn-danger">Verwerfen</button>
 </div>
