--- a/src/app/stars/stars.component.html
+++ b/src/app/stars/stars.component.html
@@ -15,7 +15,7 @@
     <form action="">
       <input class="form-control" type="text" placeholder="Suche">
     </form>
-    <app-stars-nav [stars]="stars"></app-stars-nav>
+    <app-stars-nav></app-stars-nav>
   </div>
   <div class="col-md-8">
     <router-outlet></router-outlet>
