--- a/src/app/stars/star-edit/star-edit.component.html
+++ b/src/app/stars/star-edit/star-edit.component.html
@@ -1,3 +1,4 @@
+<h2>Daten des Sterns editieren</h2>
 <div class="form-group">
   <label for="starName">Name des Sterns:</label>
   <input type="text" class="form-control" id="starName"  #starName>
@@ -11,6 +12,6 @@
   <input type="text" class="form-control" id="solarMass" #solarMass>
 </div>
 <div class="btn-group">
-  <button class="btn btn-primary" (click)="addToList()">Speichern</button>
+  <button class="btn btn-primary" (click)="onAddChanges()">Speichern</button>
   <button class="btn btn-danger">Verwerfen</button>
 </div>
