--- a/src/app/stars/star-item/star-item.component.html
+++ b/src/app/stars/star-item/star-item.component.html
@@ -1,7 +1,6 @@
-<a type="button" class="card bg-secondary text-white" (click)="onShowStarDetails()" style="display: block">
-  <a type="button">{{star.name}}</a>
-  <span class="fa fa-angle-down" (click)="isCollapsed = !isCollapsed"
-  [attr.aria-expanded]="!isCollapsed" aria-controls="collapseBasic" style="float: right; padding-right: 1em"></span></a>
+<a type="button" class="card bg-secondary text-white" (click)="isCollapsed = !isCollapsed; onShowStarDetails()"
+   [attr.aria-expanded]="!isCollapsed" aria-controls="collapseBasic">
+  {{star.name}}</a>
 <div class="card bg-dark text-white indented-1" id="collapseBasic" [collapse]="!isCollapsed"
      *ngFor="let planet of star.orbitingPlanets">{{planet.name}}
 </div>
