--- a/src/app/stars/star-item/star-item.component.html
+++ b/src/app/stars/star-item/star-item.component.html
@@ -1,6 +1,1 @@
-<a type="button" class="card bg-secondary text-white" (click)="isCollapsed = !isCollapsed; onShowStarDetails()"
-   [attr.aria-expanded]="!isCollapsed" aria-controls="collapseBasic">
-  {{star.name}}</a>
-<div class="card bg-dark text-white indented-1" id="collapseBasic" [collapse]="!isCollapsed"
-     *ngFor="let planet of star.orbitingPlanets">{{planet.name}}
-</div>
+<a type="button" class="card bg-secondary text-white" (click)="onShowStarDetails()">{{star.name}}</a>
