--- a/src/app/stars/star-add/star-add.component.html
+++ b/src/app/stars/star-add/star-add.component.html
@@ -1,17 +1,22 @@
 <h2>Neuen Stern hinzufügen</h2>
-<div class="form-group">
-  <label for="starName">Name des Sterns:</label>
-  <input type="text" class="form-control" id="starName"  #starName>
-</div>
-<div class="form-group">
-  <label for="starClass">Klasse:</label>
-  <input type="text" class="form-control" id="starClass"  #starClass>
-</div>
-<div class="form-group">
-  <label for="solarMass">Sonnenmasse:</label>
-  <input type="text" class="form-control" id="solarMass" #solarMass>
-</div>
+<form action="/save" method="post">
+  <div class="form-group">
+    <label for="starName">Name des Sterns:</label>
+    <input type="text" class="form-control" id="starName"  #starName>
+  </div>
+  <div class="form-group">
+    <label for="starClass">Klasse:</label>
+    <input type="text" class="form-control" id="starClass"  #starClass>
+  </div>
+  <div class="form-group">
+    <label for="solarMass">Sonnenmasse:</label>
+    <input type="text" class="form-control" id="solarMass" #solarMass>
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
+
 <div class="btn-group">
+
   <button class="btn btn-primary" (click)="addToList()">Speichern</button>
   <button class="btn btn-danger">Verwerfen</button>
 </div>
