--- a/src/app/stars/star-add/star-add.component.html
+++ b/src/app/stars/star-add/star-add.component.html
@@ -1,19 +1,23 @@
 <h2>Neuen Stern hinzufügen</h2>
-<form action="/save" method="post">
-  <div class="form-group">
-    <label for="starName">Name des Sterns:</label>
-    <input type="text" class="form-control" id="starName"  #starName>
-  </div>
-  <div class="form-group">
-    <label for="starClass">Klasse:</label>
-    <input type="text" class="form-control" id="starClass"  #starClass>
-  </div>
-  <div class="form-group">
-    <label for="solarMass">Sonnenmasse:</label>
-    <input type="text" class="form-control" id="solarMass" #solarMass>
-  </div>
+<form action="/save" method="POST">
+  <input type="text" placeholder="name" name="name">
+  <input type="text" placeholder="class" name="class">
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+
+
+<div class="form-group">
+  <label for="starName">Name des Sterns:</label>
+  <input type="text" class="form-control" id="starName"  #starName>
+</div>
+<div class="form-group">
+  <label for="starClass">Klasse:</label>
+  <input type="text" class="form-control" id="starClass"  #starClass>
+</div>
+<div class="form-group">
+  <label for="solarMass">Sonnenmasse:</label>
+  <input type="text" class="form-control" id="solarMass" #solarMass>
+</div>
 
 <div class="btn-group">
 
