--- a/src/app/stars/star-details/star-details.component.html
+++ b/src/app/stars/star-details/star-details.component.html
@@ -1,4 +1,6 @@
 <h2>{{selectedStar.name}}</h2>
 <br>
-<h4>Klasse der Sterns:</h4><p>{{selectedStar.spectralType}}</p>
+<h4>Spektraltyp des Sterns:</h4><p>{{selectedStar.spectralType}}</p>
 <h4>Sonnenmasse:</h4><p>{{selectedStar.solarMass}}</p>
+<h4>Entfernung zur Erde:</h4><p>{{selectedStar.distance}}</p>
+<h4>Umkreisende Planeten:</h4><p *ngFor="let planet of selectedStar.orbitingPlanets">{{planet.name}}</p>
