--- a/src/app/stars/star-add/star-add.component.html
+++ b/src/app/stars/star-add/star-add.component.html
@@ -11,6 +11,10 @@
   <label for="solarMass">Sonnenmasse:</label>
   <input type="text" class="form-control" id="solarMass" #solarMass>
 </div>
+<div class="form-group">
+  <label for="solarMass">Entfernung:</label>
+  <input type="text" class="form-control" id="distance" #distance>
+</div>
 <div class="btn-group">
   <button class="btn btn-primary" (click)="addToList()">Speichern</button>
   <button class="btn btn-danger">Verwerfen</button>
