--- a/src/app/stars/star-edit/star-edit.component.html
+++ b/src/app/stars/star-edit/star-edit.component.html
@@ -4,12 +4,16 @@
   <input type="text" class="form-control" id="starName"  #starName>
 </div>
 <div class="form-group">
-  <label for="starClass">Klasse:</label>
+  <label for="starClass">Spektraltyp:</label>
   <input type="text" class="form-control" id="starClass"  #starClass>
 </div>
 <div class="form-group">
   <label for="solarMass">Sonnenmasse:</label>
   <input type="text" class="form-control" id="solarMass" #solarMass>
+</div>
+<div class="form-group">
+  <label for="solarMass">Entfernung:</label>
+  <input type="text" class="form-control" id="distance" #distance>
 </div>
 <div class="btn-group">
   <button class="btn btn-primary" (click)="onAddChanges()">Speichern</button>
