--- a/src/app/planets/planets.component.html
+++ b/src/app/planets/planets.component.html
@@ -1,10 +1,20 @@
 <div class="row">
   <div class="col">
-    <ul class="list-group">
-      <a class="list-group-item" style="cursor: pointer" *ngFor="let planet of planets">
-        {{planet.name}}
-      </a>
-    </ul>
+
+    <table class="table table-bordered">
+      <thead>
+      <tr>
+        <th>Name</th>
+        <th>Masse</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr *ngFor="let planet of planets">
+        <td>{{planet.name}}</td>
+        <td>{{planet.minMass}}</td>
+      </tr>
+      </tbody>
+    </table>
   </div>
   <div class="col"></div>
 </div>
