--- a/src/app/stars/star-details/star-details.component.html
+++ b/src/app/stars/star-details/star-details.component.html
@@ -3,4 +3,8 @@
 <h4>Spektraltyp des Sterns:</h4><p>{{selectedStar.spectralType}}</p>
 <h4>Sonnenmasse:</h4><p>{{selectedStar.solarMass}}</p>
 <h4>Entfernung zur Erde:</h4><p>{{selectedStar.distance}}</p>
-<h4>Umkreisende Planeten:</h4><a *ngFor="let planet of selectedStar.orbitingPlanets" (click)="onPlanetSelected(planet)">{{planet.name}}</a>
+<h4>Umkreisende Planeten:</h4>
+<ul class="list-group">
+  <a role="menuitem" class="list-group-item" *ngFor="let planet of selectedStar.orbitingPlanets"
+     (click)="onPlanetSelected(planet)">{{planet.name}}</a>
+</ul>
