--- a/src/app/stars/star-add/star-add.component.html
+++ b/src/app/stars/star-add/star-add.component.html
@@ -3,14 +3,16 @@
   <label for="starName">Name des Sterns:</label>
   <input type="text" class="form-control" id="starName"  #starName>
 </div>
-<div class="form-group">
-  <label for="starClass">Klasse:</label>
-  <input type="text" class="form-control" id="starClass"  #starClass>
-</div>
-<div class="form-group">
-  <label for="solarMass">Sonnenmasse:</label>
-  <input type="text" class="form-control" id="solarMass" #solarMass>
-</div>
+<form class="form-inline">
+  <div class="form-group">
+    <label for="starClass">Klasse:</label>
+    <input type="text" class="form-control" id="starClass"  #starClass>
+  </div>
+  <div class="form-group">
+    <label for="solarMass">Sonnenmasse:</label>
+    <input type="text" class="form-control" id="solarMass" #solarMass>
+  </div>
+</form>
 <div class="form-group">
   <label for="distance">Entfernung:</label>
   <input type="text" class="form-control" id="distance" #distance>
