--- a/src/app/stars/star-add/star-add.component.html
+++ b/src/app/stars/star-add/star-add.component.html
@@ -1,22 +1,26 @@
 <h2>Neuen Stern hinzufügen</h2>
-<div class="form-group">
-  <label for="starName">Name des Sterns:</label>
-  <input type="text" class="form-control" id="starName"  #starName>
-</div>
-<form class="form-inline">
+
+<form>
   <div class="form-group">
-    <label for="starClass">Klasse:</label>
-    <input type="text" class="form-control" id="starClass"  #starClass>
+    <label for="starName">Name des Sterns:</label>
+    <input type="text" class="form-control" id="starName"  #starName>
+  </div>
+  <div class="form-row">
+    <div class="form-group col-md-6">
+      <label for="starClass">Klasse:</label>
+      <input type="text" class="form-control" id="starClass"  #starClass>
+    </div>
+    <div class="form-group col-md-6">
+      <label for="solarMass">Sonnenmasse:</label>
+      <input type="text" class="form-control" id="solarMass" #solarMass>
+    </div>
   </div>
   <div class="form-group">
-    <label for="solarMass">Sonnenmasse:</label>
-    <input type="text" class="form-control" id="solarMass" #solarMass>
+    <label for="distance">Entfernung von der Erde:</label>
+    <input type="text" class="form-control" id="distance" #distance>
   </div>
 </form>
-<div class="form-group">
-  <label for="distance">Entfernung:</label>
-  <input type="text" class="form-control" id="distance" #distance>
-</div>
+<hr>
 <h4>Umkreisende Planeten:</h4>
 <div *ngFor="let planet of planets">{{planet.name}}</div>
 <div class="form-group">
@@ -27,9 +31,9 @@
   <label for="planetMass">Masse:</label>
   <input type="text" class="form-control" id="planetMass" #planetMass>
 </div>
-<button class="btn-primary" (click)="onAddPlanet()">Hinzufügen</button>
+<button class="btn btn-primary" (click)="onAddPlanet()">Hinzufügen</button>
 <hr>
-<div class="btn-group">
-  <button class="btn btn-primary" (click)="onAddToList()">Speichern</button>
+<div class="btn-group" style="float: left">
+  <button class="btn btn-success" (click)="onAddToList()">Speichern</button>
   <button class="btn btn-danger" (click)="onCancel()">Verwerfen</button>
 </div>
