--- a/src/app/stars/star-details/star-details.component.html
+++ b/src/app/stars/star-details/star-details.component.html
@@ -2,7 +2,7 @@
 <br>
 <h4>Spektraltyp des Sterns:</h4><p>{{selectedStar.spectralType}}</p>
 <h4>Sonnenmasse:</h4><p>{{selectedStar.solarMass}} M</p>
-<h4>Entfernung zur Erde:</h4><p>{{selectedStar.distance}}Lichtjahre</p>
+<h4>Entfernung zur Erde:</h4><p>{{selectedStar.distance}} Lj</p>
 <h4>Umkreisende Planeten:</h4>
 <ul class="list-group">
   <a role="menuitem" class="list-group-item" *ngFor="let planet of selectedStar.orbitingPlanets"
