--- a/src/app/stars/star-add/star-add.component.html
+++ b/src/app/stars/star-add/star-add.component.html
@@ -7,7 +7,7 @@
   </div>
   <div class="form-row">
     <div class="form-group col-md-6">
-      <label for="starClass">Klasse:</label>
+      <label for="starClass">Spektraltyp:</label>
       <input type="text" class="form-control" id="starClass"  #starClass>
     </div>
     <div class="form-group col-md-6">
@@ -28,12 +28,12 @@
   <input type="text" class="form-control" id="planetName" #planetName>
 </div>
 <div class="form-group">
-  <label for="planetMass">Masse:</label>
+  <label for="planetMass">Minimale Erdmasse:</label>
   <input type="text" class="form-control" id="planetMass" #planetMass>
 </div>
 <button class="btn btn-primary" (click)="onAddPlanet()">Hinzufügen</button>
 <hr>
-<div class="btn-group" style="float: left">
+<div class="btn-group float-right">
   <button class="btn btn-success" (click)="onAddToList()">Speichern</button>
   <button class="btn btn-danger" (click)="onCancel()">Verwerfen</button>
 </div>
