--- a/src/app/stars/star-edit/star-edit.component.html
+++ b/src/app/stars/star-edit/star-edit.component.html
@@ -1,21 +1,31 @@
 <h2>Daten des Sterns editieren</h2>
-<div class="form-group">
-  <label for="starName">Name des Sterns:</label>
-  <input type="text" class="form-control" id="starName"  #starName>
+<form>
+  <div class="form-group">
+    <label for="starName">Name des Sterns:</label>
+    <input type="text" class="form-control" id="starName"  #starName>
+  </div>
+  <div class="form-row">
+    <div class="form-group">
+      <label for="starClass">Spektraltyp:</label>
+      <input type="text" class="form-control" id="starClass"  #starClass>
+    </div>
+    <div class="form-group">
+      <label for="solarMass">Sonnenmasse:</label>
+      <input type="text" class="form-control" id="solarMass" #solarMass>
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="distance">Entfernung von der Erde:</label>
+    <input type="text" class="form-control" id="distance" #distance>
+  </div>
+</form>
+<hr>
+<h4>Umkreisende Planeten:</h4>
+<div *ngFor="let planet of star.orbitingPlanets">{{planet.name}}
+  <button class="btn btn-warning">-</button>
 </div>
-<div class="form-group">
-  <label for="starClass">Spektraltyp:</label>
-  <input type="text" class="form-control" id="starClass"  #starClass>
-</div>
-<div class="form-group">
-  <label for="solarMass">Sonnenmasse:</label>
-  <input type="text" class="form-control" id="solarMass" #solarMass>
-</div>
-<div class="form-group">
-  <label for="solarMass">Entfernung:</label>
-  <input type="text" class="form-control" id="distance" #distance>
-</div>
+<hr>
 <div class="btn-group">
   <button class="btn btn-primary" (click)="onAddChanges()">Speichern</button>
-  <button class="btn btn-danger">Verwerfen</button>
+  <button class="btn btn-danger" (click)="onCancel()">Verwerfen</button>
 </div>
