--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -12,9 +12,11 @@
     </li>
   </ul>
 
-  <!-- Dropdown -->
   <ul class="nav navbar-nav ml-auto">
-    <li class="nav-item dropdown" dropdown>
+    <li class="nav-item">
+      <a href="https://github.com/valentinprotiuc/stars-and-planets"><span class="fa fa-github"></span></a>
+    </li>
+    <!--<li class="nav-item dropdown" dropdown>
       <a class="nav-link dropdown-toggle" role="button" id="navbardrop" data-toggle="dropdown" dropdownToggle>
         Konto
       </a>
@@ -22,6 +24,6 @@
         <a class="dropdown-item" href="#">Registrieren</a>
         <a class="dropdown-item" href="#">Einloggen</a>
       </div>
-    </li>
+    </li>-->
   </ul>
 </nav>
