--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -5,18 +5,16 @@
   <!-- Links -->
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link" role="button" routerLink="/stars">Sterne</a>
+      <a class="nav-link" role="button" routerLink="/stars" style="color: black">Sterne</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" role="button" routerLink="/planets">Planeten</a>
     </li>
   </ul>
+  <a href="https://github.com/valentinprotiuc/stars-and-planets" style="color: black"><span class="fa fa-github"></span></a>
+  <!--<ul class="nav navbar-nav ml-auto">
 
-  <ul class="nav navbar-nav ml-auto">
-    <li class="nav-item">
-      <a href="https://github.com/valentinprotiuc/stars-and-planets"><span class="fa fa-github"></span></a>
-    </li>
-    <!--<li class="nav-item dropdown" dropdown>
+    &lt;!&ndash;<li class="nav-item dropdown" dropdown>
       <a class="nav-link dropdown-toggle" role="button" id="navbardrop" data-toggle="dropdown" dropdownToggle>
         Konto
       </a>
@@ -24,6 +22,6 @@
         <a class="dropdown-item" href="#">Registrieren</a>
         <a class="dropdown-item" href="#">Einloggen</a>
       </div>
-    </li>-->
-  </ul>
+    </li>&ndash;&gt;
+  </ul>-->
 </nav>
