changed some colors

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,20 +1,19 @@
-<nav class="navbar navbar-expand-sm bg-info navbar-dark">
+<nav class="navbar navbar-expand-sm navbar-light">
   <!-- Brand -->
   <a class="navbar-brand" role="button" routerLink="">Sterne&Planeten</a>
 
   <!-- Links -->
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link" role="button" routerLink="/stars" style="color: black">Sterne</a>
+      <a class="nav-link" role="button" routerLink="/stars">Sterne</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" role="button" routerLink="/planets">Planeten</a>
     </li>
   </ul>
-  <a href="https://github.com/valentinprotiuc/stars-and-planets" style="color: black"><span class="fa fa-github"></span></a>
-  <!--<ul class="nav navbar-nav ml-auto">
-
-    &lt;!&ndash;<li class="nav-item dropdown" dropdown>
+  <ul class="nav navbar-nav ml-auto">
+    <a class="nav-link" role="button" href="https://github.com/valentinprotiuc/stars-and-planets"><span class="fa fa-github black-icon"></span></a>
+    <!--<li class="nav-item dropdown" dropdown>
       <a class="nav-link dropdown-toggle" role="button" id="navbardrop" data-toggle="dropdown" dropdownToggle>
         Konto
       </a>
@@ -22,6 +21,6 @@
         <a class="dropdown-item" href="#">Registrieren</a>
         <a class="dropdown-item" href="#">Einloggen</a>
       </div>
-    </li>&ndash;&gt;
-  </ul>-->
+    </li>-->
+  </ul>
 </nav>
