--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -12,7 +12,8 @@
     </li>
   </ul>
   <ul class="nav navbar-nav ml-auto">
-    <a class="nav-link" role="button" href="https://github.com/valentinprotiuc/stars-and-planets"><span class="fa fa-github black-icon"></span></a>
+    <a class="nav-link" role="button" href="https://github.com/valentinprotiuc/stars-and-planets"><span
+      class="fa fa-github black-icon"></span></a>
     <!--<li class="nav-item dropdown" dropdown>
       <a class="nav-link dropdown-toggle" role="button" id="navbardrop" data-toggle="dropdown" dropdownToggle>
         Konto
