--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -3,13 +3,13 @@ a{
 }
 
 .nav-link{
-  color: black;
+  color: #fbf9e9;
 }
 
 .black-icon{
-  color: black;
+  color: #fbf9e9;
 }
 
 .navbar-expand-sm{
-  background-color: #3F69AA;
+  background-color: #203a46;
 }
