--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm navbar-light">
+<nav class="navbar navbar-expand-sm navbar-dark">
   <!-- Brand -->
   <a class="navbar-brand" role="button" routerLink="">Sterne&Planeten</a>
 
@@ -13,7 +13,7 @@
   </ul>
   <ul class="nav navbar-nav ml-auto">
     <a class="nav-link" role="button" href="https://github.com/valentinprotiuc/stars-and-planets"><span
-      class="fa fa-github black-icon"></span></a>
+      class="fa fa-github white-icon"></span></a>
     <!--<li class="nav-item dropdown" dropdown>
       <a class="nav-link dropdown-toggle" role="button" id="navbardrop" data-toggle="dropdown" dropdownToggle>
         Konto
