--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -6,14 +6,12 @@ a{
   color: #fbf9e9;
 }
 
-.black-icon{
+.white-icon{
   color: #fbf9e9;
+  font-size: 1.5rem !important;
+
 }
 
 .navbar-expand-sm{
   background-color: #203a46;
-}
-
-nav{
-  font-size: 1.5rem !important;
 }
