--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -12,8 +12,12 @@
     </li>
   </ul>
   <ul class="nav navbar-nav ml-auto">
-    <a class="nav-link" role="button" href="https://github.com/valentinprotiuc/stars-and-planets"><span>Repo</span><i
-      class="fa fa-github white-icon"></i></a>
+    <a class="nav-link" role="button" href="https://github.com/valentinprotiuc/stars-and-planets"><i
+      class="fa fa-github white-icon"></i>
+      <p>Repo</p>
+    </a>
+    
+
     <!--<li class="nav-item dropdown" dropdown>
       <a class="nav-link dropdown-toggle" role="button" id="navbardrop" data-toggle="dropdown" dropdownToggle>
         Konto
