--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -12,11 +12,14 @@
     </li>
   </ul>
   <ul class="nav navbar-nav ml-auto">
-    <a class="nav-link" role="button" href="https://github.com/valentinprotiuc/stars-and-planets"><i
-      class="fa fa-github white-icon"></i>
-      <p>Repo</p>
-    </a>
-    
+    <li style='text-align:center;'>
+      <a class="nav-link" role="button" href="https://github.com/valentinprotiuc/stars-and-planets"><i
+        class="fa fa-github white-icon"></i>
+        <p>Git Repo</p>
+      </a>
+    </li>
+
+
 
     <!--<li class="nav-item dropdown" dropdown>
       <a class="nav-link dropdown-toggle" role="button" id="navbardrop" data-toggle="dropdown" dropdownToggle>
