--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -12,10 +12,9 @@
     </li>
   </ul>
   <ul class="nav navbar-nav ml-auto">
-    <li style='text-align:center;'>
+    <li class="nav-item">
       <a class="nav-link" role="button" href="https://github.com/valentinprotiuc/stars-and-planets"><i
         class="fa fa-github white-icon"></i>
-        <p>Git Repo</p>
       </a>
     </li>
 
