--- a/src/app/stars/star-edit/star-edit.component.html
+++ b/src/app/stars/star-edit/star-edit.component.html
@@ -21,8 +21,8 @@
 </form>
 <hr>
 <h4>Umkreisende Planeten:</h4>
-<div *ngFor="let planet of star.orbitingPlanets">{{planet.name}}
-  <button class="btn btn-warning">-</button>
+<div *ngFor="let planet of star.orbitingPlanets"><p>{{planet.name}} </p>
+  <button class="btn btn-outline-info btn-sm float-right"> - </button>
 </div>
 <hr>
 <div class="btn-group">
