--- a/src/app/stars/star-edit/star-edit.component.html
+++ b/src/app/stars/star-edit/star-edit.component.html
@@ -5,11 +5,11 @@
     <input type="text" class="form-control" id="starName" #starName>
   </div>
   <div class="form-row">
-    <div class="form-group">
+    <div class="form-group col-md-6">
       <label for="starClass">Spektraltyp:</label>
       <input type="text" class="form-control" id="starClass" #starClass>
     </div>
-    <div class="form-group">
+    <div class="form-group col-md-6">
       <label for="solarMass">Sonnenmasse:</label>
       <input type="text" class="form-control" id="solarMass" #solarMass>
     </div>
