--- a/src/app/stars/stars.component.html
+++ b/src/app/stars/stars.component.html
@@ -17,7 +17,7 @@
     </form>
     <app-stars-nav></app-stars-nav>
   </div>
-  <div class="col-md-7">
+  <div class="col-md-7 backgrd">
     <router-outlet></router-outlet>
   </div>
 </div>
