--- a/src/app/stars/stars.component.css
+++ b/src/app/stars/stars.component.css
@@ -1,7 +1,9 @@
-.limited-height{
+.limited-height {
   border-right: 1px solid gray;
 }
 
-.backgrd{
+.backgrd {
   background-image: url("../../assets/moon-26619_1280.png");
+  background-repeat: no-repeat;
+  background-size: auto calc(100vh - 12rem);
 }
