--- a/src/app/stars/stars.component.html
+++ b/src/app/stars/stars.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-4 limited-height">
+  <div class="col-md-3 panel-border">
     <div class="btn-group btn-block">
       <button type="button" class="btn btn-outline-primary" (click)="onAddStar()"><span
         class="fa fa-plus-square-o"></span> Hinzufügen
@@ -17,7 +17,7 @@
     </form>
     <app-stars-nav></app-stars-nav>
   </div>
-  <div class="col-md-7 backgrd">
+  <div class="col-md-8 limited-height">
     <router-outlet></router-outlet>
   </div>
 </div>
