--- a/src/app/stars/star-add/star-add.component.html
+++ b/src/app/stars/star-add/star-add.component.html
@@ -1,23 +1,30 @@
 <h2>Neuen Stern hinzufügen</h2>
 
-<form>
+<form [formGroup]="newStarForm" (ngSubmit)="onSubmit()">
   <div class="form-group">
     <label for="starName">Name des Sterns:</label>
-    <input type="text" class="form-control" id="starName"  #starName>
+    <span class="help-block"
+          *ngIf="!newStarForm.get('starName').valid && newStarForm.get('starName').touched"
+          style="float: right; color: red">Pflichtfeld*</span>
+    <input type="text" class="form-control" formControlName="starName" id="starName">
   </div>
   <div class="form-row">
     <div class="form-group col-md-6">
       <label for="starClass">Spektraltyp:</label>
-      <input type="text" class="form-control" id="starClass"  #starClass>
+      <input type="text" class="form-control" formControlName="starClass" id="starClass">
     </div>
     <div class="form-group col-md-6">
       <label for="solarMass">Sonnenmasse:</label>
-      <input type="text" class="form-control" id="solarMass" #solarMass>
+      <input type="text" class="form-control" formControlName="solarMass" id="solarMass">
     </div>
   </div>
   <div class="form-group">
     <label for="distance">Entfernung von der Erde:</label>
-    <input type="text" class="form-control" id="distance" #distance>
+    <input type="text" class="form-control" formControlName="distance" id="distance">
+  </div>
+  <div class="btn-group float-right">
+    <button class="btn btn-primary" type="submit" [disabled]="!newStarForm.valid">Speichern</button>
+    <button class="btn btn-secondary" type="reset">Verwerfen</button>
   </div>
 </form>
 <hr>
@@ -25,15 +32,12 @@
 <div *ngFor="let planet of planets">{{planet.name}}</div>
 <div class="form-group">
   <label for="planetName">Name:</label>
-  <input type="text" class="form-control" id="planetName" #planetName>
+  <input type="text" class="form-control" id="planetName">
 </div>
 <div class="form-group">
   <label for="planetMass">Minimale Erdmasse:</label>
-  <input type="text" class="form-control" id="planetMass" #planetMass>
+  <input type="text" class="form-control" id="planetMass">
 </div>
 <button class="btn btn-primary" (click)="onAddPlanet()">Hinzufügen</button>
 <hr>
-<div class="btn-group float-right">
-  <button class="btn btn-success" (click)="onAddToList()">Speichern</button>
-  <button class="btn btn-danger" (click)="onCancel()">Verwerfen</button>
-</div>
+
