--- a/src/app/stars/stars.component.html
+++ b/src/app/stars/stars.component.html
@@ -12,9 +12,9 @@
       </button>
     </div>
     <hr>
-    <form action="">
+   <!-- <form>
       <input class="form-control" type="text" placeholder="Suche">
-    </form>
+    </form>-->
     <app-stars-nav></app-stars-nav>
   </div>
   <div class="col-md-8 limited-height">
