temporarily commented out the onAddPlanet method

--- a/src/app/stars/star-add/star-add.component.html
+++ b/src/app/stars/star-add/star-add.component.html
@@ -38,6 +38,6 @@
   <label for="planetMass">Minimale Erdmasse:</label>
   <input type="text" class="form-control" id="planetMass">
 </div>
-<button class="btn btn-primary" (click)="onAddPlanet()">Hinzufügen</button>
+<button class="btn btn-primary">Hinzufügen</button>
 <hr>
 
