--- a/src/app/stars/star-add/star-add.component.html
+++ b/src/app/stars/star-add/star-add.component.html
@@ -23,29 +23,32 @@
     <input type="text" class="form-control" formControlName="distance" id="distance">
   </div>
   <hr>
-  <h4>Umkreisende Planeten:</h4>
-  <div class="btn-group" dropdown>
-    <button id="button-basic" dropdownToggle type="button" class="btn btn-primary dropdown-toggle"
-            aria-controls="dropdown-basic">
-      Hinzufügen<span class="caret"></span>
-    </button>
-    <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu"
-        role="menu" aria-labelledby="button-basic">
-      <li role="menuitem"><a class="dropdown-item">Neu erstellen</a></li>
-      <li role="menuitem"><a class="dropdown-item">Aus vorhandenen wählen</a></li>
-    </ul>
+  <div><h4>Umkreisende Planeten:</h4>
+    <div class="btn-group inline-button" dropdown>
+      <button id="button-basic" dropdownToggle type="button" class="btn btn-primary dropdown-toggle"
+              aria-controls="dropdown-basic">
+        Hinzufügen<span class="caret"></span>
+      </button>
+      <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu"
+          role="menu" aria-labelledby="button-basic">
+        <li role="menuitem"><a class="dropdown-item">Neu erstellen</a></li>
+        <li role="menuitem"><a class="dropdown-item">Aus vorhandenen wählen</a></li>
+      </ul>
+    </div>
   </div>
   <div *ngFor="let planet of planets"><span>{{planet.name}}  </span>
     <i role="button" class="fa fa-minus-square-o" style="cursor: pointer" (click)="onRemovePlanet(planet)"></i></div>
-  <div class="form-group">
-    <label for="planetName">Name:</label>
-    <input type="text" class="form-control" formControlName="planetName" id="planetName">
+  <div formGroupName="newPlanetFormGroup">
+    <div class="form-group">
+      <label for="planetName">Name:</label>
+      <input type="text" class="form-control" formControlName="planetName" id="planetName">
+    </div>
+    <div class="form-group">
+      <label for="planetMass">Minimale Erdmasse:</label>
+      <input type="text" class="form-control" formControlName="planetMass" id="planetMass">
+    </div>
+    <button class="btn btn-primary" type="button" (click)="onAddPlanet()">Erstellen</button>
   </div>
-  <div class="form-group">
-    <label for="planetMass">Minimale Erdmasse:</label>
-    <input type="text" class="form-control" formControlName="planetMass" id="planetMass">
-  </div>
-  <button class="btn btn-primary" type="button" (click)="onAddPlanet()">Hinzufügen</button>
   <hr>
   <div class="btn-group float-right">
     <button class="btn btn-primary" type="submit" [disabled]="!newStarForm.valid">Speichern</button>
