added extra properties to star and planet model. modified the add and edit components to receive information for new properties.

--- a/src/app/stars/star-add/star-add.component.css
+++ b/src/app/stars/star-add/star-add.component.css
@@ -2,6 +2,10 @@ input.ng-invalid.ng-touched{
   border: 1px solid red;
 }
 
-.inline-button{
+.inline-header{
   display: inline-block;
+}
+
+.card {
+  margin-bottom: 2px;
 }
