--- a/src/app/stars/star-edit/star-edit.component.html
+++ b/src/app/stars/star-edit/star-edit.component.html
@@ -1,34 +1,42 @@
 <h2>Daten des Sterns editieren</h2>
 <form [formGroup]="editStarForm" (ngSubmit)="onSubmit()">
   <div class="form-group">
-    <label for="starName">Name des Sterns:</label>
-    <span class="help-block"
-          *ngIf="!editStarForm.get('starName').valid && editStarForm.get('starName').touched"
-          style="float: right; color: red">Pflichtfeld*</span>
+    <label for="starName">Name des Sterns: <strong style="color: red">*</strong></label>
     <input type="text" class="form-control" formControlName="starName" id="starName">
   </div>
   <div class="form-row">
     <div class="form-group col-md-6">
-      <label for="starClass">Spektraltyp:</label>
-      <input type="text" class="form-control" formControlName="starClass" id="starClass">
+      <label for="spectralType">Spektraltyp: </label>
+      <input type="text" class="form-control" formControlName="spectralType" id="spectralType">
     </div>
     <div class="form-group col-md-6">
-      <label for="solarMass">Sonnenmasse:</label>
-      <input type="text" class="form-control" formControlName="solarMass" id="solarMass">
+      <label for="distance">Entfernung von der Erde:</label>
+      <input type="text" class="form-control" formControlName="distance" id="distance">
     </div>
   </div>
-  <div class="form-group">
-    <label for="distance">Entfernung von der Erde:</label>
-    <input type="text" class="form-control" formControlName="distance" id="distance">
+  <div class="form-row">
+    <div class="form-group col-md-4">
+      <label for="solarMass">Masse:</label>
+      <input type="text" class="form-control" formControlName="solarMass" id="solarMass">
+    </div>
+    <div class="form-group col-md-4">
+      <label for="solarRadius">Radius:</label>
+      <input type="text" class="form-control" formControlName="solarRadius" id="solarRadius">
+    </div>
+    <div class="form-group col-md-4">
+      <label for="effectiveTemperature">Effektive Temperatur:</label>
+      <input type="text" class="form-control" formControlName="effectiveTemperature" id="effectiveTemperature">
+    </div>
+  </div>
+  <hr>
+  <h4>Umkreisende Planeten:</h4>
+  <div *ngFor="let planet of star.orbitingPlanets"><span>{{planet.name}}  </span>
+    <i role="button" class="fa fa-minus-square-o" style="cursor: pointer" (click)="onRemovePlanet(planet)"></i>
+  </div>
+  <hr>
+  <span class="help-block"><strong style="color: red">*</strong> Pflichtfeld</span>
+  <div class="btn-group">
+    <button class="btn btn-primary" type="submit" [disabled]="!editStarForm.valid">Speichern</button>
+    <button class="btn btn-danger" type="button" (click)="onCancel()">Verwerfen</button>
   </div>
 </form>
-<hr>
-<h4>Umkreisende Planeten:</h4>
-<div *ngFor="let planet of star.orbitingPlanets"><span>{{planet.name}}  </span>
-  <i role="button" class="fa fa-minus-square-o" style="cursor: pointer" (click)="onRemovePlanet(planet)"></i>
-</div>
-<hr>
-<div class="btn-group">
-  <button class="btn btn-primary" type="submit" [disabled]="!editStarForm.valid">Speichern</button>
-  <button class="btn btn-danger" type="button" (click)="onCancel()">Verwerfen</button>
-</div>
