--- a/src/app/stars/star-edit/star-edit.component.html
+++ b/src/app/stars/star-edit/star-edit.component.html
@@ -35,7 +35,7 @@
   </div>
   <hr>
   <span class="help-block"><strong style="color: red">*</strong> Pflichtfeld</span>
-  <div class="btn-group">
+  <div class="btn-group float-right">
     <button class="btn btn-primary" type="submit" [disabled]="!editStarForm.valid">Speichern</button>
     <button class="btn btn-danger" type="button" (click)="onCancel()">Verwerfen</button>
   </div>
