--- a/src/app/stars/star-details/star-details.component.html
+++ b/src/app/stars/star-details/star-details.component.html
@@ -6,5 +6,5 @@
 <h4>Umkreisende Planeten:</h4>
 <ul class="list-group">
   <a role="menuitem" class="list-group-item" *ngFor="let planet of selectedStar.orbitingPlanets"
-     (click)="onPlanetSelected(planet)" style="cursor: pointer">{{planet.name}}</a>
+     (click)="onPlanetSelected(planet)" style="cursor: pointer">{{planet.planetName}}</a>
 </ul>
