--- a/src/app/stars/star-details/star-details.component.html
+++ b/src/app/stars/star-details/star-details.component.html
@@ -1,7 +1,9 @@
 <h2>{{selectedStar.name}}</h2>
 <br>
 <h4>Spektraltyp des Sterns:</h4><p>{{selectedStar.spectralType}}</p>
-<h4>Sonnenmasse:</h4><p>{{selectedStar.solarMass}} M</p>
+<h4>Masse:</h4><p>{{selectedStar.solarMass}} M</p>
+<h4>Radius:</h4><p>{{selectedStar.solarRadius}} R</p>
+<h4>Effektive Temperatur:</h4><p>{{selectedStar.effectiveTemperature}} K</p>
 <h4>Entfernung zur Erde:</h4><p>{{selectedStar.distance}} Lj</p>
 <h4>Umkreisende Planeten:</h4>
 <ul class="list-group">
