added the search filter to the star list

--- a/src/app/stars/stars-nav/stars-nav.component.html
+++ b/src/app/stars/stars-nav/stars-nav.component.html
@@ -1,3 +1,4 @@
+<input class="form-control" type="text" placeholder="Suche..." (keyup)="filterStarList()" #searchFilter>
 <ul class="nav flex-column fixed-height">
   <li class="nav-item" *ngFor="let star of stars">
     <app-star-item [star]="star"></app-star-item>
