--- a/src/app/stars/stars-nav/stars-nav.component.css
+++ b/src/app/stars/stars-nav/stars-nav.component.css
@@ -1,5 +1,23 @@
-.fixed-height{
+.fixed-height {
   display: block;
   overflow-y: auto;
   max-height: calc(100vh - 12rem);
+}
+
+html {
+  overflow: scroll;
+  overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+  width: 0px;
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #FF0000;
+}
+
+.divider-right{
+  border-right: 1px solid lightgray;
 }
