--- a/src/app/stars/stars-nav/stars-nav.component.html
+++ b/src/app/stars/stars-nav/stars-nav.component.html
@@ -1,6 +1,20 @@
-<div style="display: inline-block">
-  <input class="form-control" type="text" placeholder="Suche..." (keyup)="filterStarList()" #searchFilter>
-  <button class="btn btn-primary" (click)="sortList()">Sort</button>
+<div class="row">
+  <div class="col-md-8 divider-right"><input class="form-control" type="text" placeholder="Suche..."
+                                             (keyup)="filterStarList()" #searchFilter></div>
+  <div class="col-md-4">
+    <div class="btn-group btn-block" dropdown>
+      <button id="button-basic" dropdownToggle type="button" class="btn btn-primary dropdown-toggle"
+              aria-controls="dropdown-basic">
+        Sortieren <span class="caret"></span>
+      </button>
+      <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu"
+          role="menu" aria-labelledby="button-basic">
+        <li role="menuitem" (click)="sortList('name')"><a class="dropdown-item">Name</a></li>
+        <li role="menuitem" (click)="sortList('distance')"><a class="dropdown-item">Entfernung</a></li>
+        <li role="menuitem" (click)="sortList('mass')"><a class="dropdown-item">Masse</a></li>
+      </ul>
+    </div>
+  </div>
 </div>
 <ul class="nav flex-column fixed-height">
   <li class="nav-item" *ngFor="let star of stars">
