added some padding below the search filter

--- a/src/app/stars/stars-nav/stars-nav.component.css
+++ b/src/app/stars/stars-nav/stars-nav.component.css
@@ -4,20 +4,10 @@
   max-height: calc(100vh - 12rem);
 }
 
-html {
-  overflow: scroll;
-  overflow-x: hidden;
-}
-
-::-webkit-scrollbar {
-  width: 0px;
-  background: transparent;
-}
-
-::-webkit-scrollbar-thumb {
-  background: #FF0000;
-}
-
-.divider-right{
+.divider-right {
   border-right: 1px solid lightgray;
+}
+
+.padding-botton {
+  padding-bottom: 2px;
 }
